--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -1,130 +1,117 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.stratuslab.pkgs.claudia</groupId>
-  <artifactId>claudia-client</artifactId>
-  <packaging>jar</packaging>
-  <version>0.1.3-SNAPSHOT</version>
-  <name>Claudia Client</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>eu.stratuslab.pkgs.claudia</groupId>
+	<artifactId>claudia-client</artifactId>
+	<packaging>jar</packaging>
+	<version>0.1.3-SNAPSHOT</version>
+	<name>Claudia Client</name>
 
-  <parent>
-    <groupId>eu.stratuslab.pkgs.claudia</groupId>
-    <artifactId>claudia-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>eu.stratuslab.pkgs.claudia</groupId>
+		<artifactId>claudia-parent</artifactId>
+		<version>1.2-SNAPSHOT</version>
+	</parent>
 
-  <repositories>
-    <repository>  
-      <id>maven-restlet</id>  
-      <name>Public online Restlet repository</name>  
-      <url>http://maven.restlet.org</url>  
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>maven-restlet</id>
+			<name>Public online Restlet repository</name>
+			<url>http://maven.restlet.org</url>
+		</repository>
+	</repositories>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-		<groupId>com.noelios.restlet</groupId>
-		<artifactId>com.noelios.restlet</artifactId>
-		<version>1.1.7</version>
-    </dependency>
-    <dependency>
-		<groupId>org.restlet</groupId>
-		<artifactId>org.restlet</artifactId>
-		<version>1.1.7</version>
-    </dependency>    
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.0</version>
-    </dependency>
-  </dependencies>
-  <distributionManagement>
-   <repository>
-      <id>stratuslab.releases</id>
-      <name>Releases</name>
-      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>stratuslab.snapshots</id>
-      <name>Snapshots</name>
-      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.noelios.restlet</groupId>
+			<artifactId>com.noelios.restlet</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.restlet</groupId>
+			<artifactId>org.restlet</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
+	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>stratuslab.releases</id>
+			<name>Releases</name>
+			<url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>stratuslab.snapshots</id>
+			<name>Snapshots</name>
+			<url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
-  
-  <build>
-    <plugins>
 
-	<plugin>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-resources-plugin</artifactId>
-	  <version>2.4.3</version>
-	  <configuration>
-	    <encoding>UTF-8</encoding>
-	  </configuration>
-	</plugin>
+	<build>
+		<plugins>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.telefonica.claudia.slm.test.ClaudiaClient</mainClass>
-	      	  <addClasspath>true</addClasspath>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
 
-   <!--   <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2-beta-5</version>
-        <configuration>
-          <descriptors>
-            <descriptor>src/main/assembly/src.xml</descriptor>
-            <descriptor>src/main/assembly/srcEnv.xml</descriptor>
-          </descriptors>
-          <descriptorRefs>
-            <descriptorRef>project</descriptorRef>
-          </descriptorRefs>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.telefonica.claudia.slm.test.ClaudiaClient</mainClass>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 
-        </configuration>
-      </plugin>-->
- <plugin>
-     <groupId>org.apache.maven.plugins</groupId>
-     <artifactId>maven-deploy-plugin</artifactId>
-     <version>2.5</version>
-   </plugin>
-<plugin>
+			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version> 
+				<configuration> <descriptors> <descriptor>src/main/assembly/src.xml</descriptor> 
+				<descriptor>src/main/assembly/srcEnv.xml</descriptor> </descriptors> <descriptorRefs> 
+				<descriptorRef>project</descriptorRef> </descriptorRefs> </configuration> 
+				</plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-            <descriptor>src/main/assembly/src.xml</descriptor>
-            <descriptor>src/main/assembly/srcEnv.xml</descriptor>
-          </descriptors>
+						<descriptor>src/main/assembly/src.xml</descriptor>
+						<descriptor>src/main/assembly/srcEnv.xml</descriptor>
+					</descriptors>
 
 
 				</configuration>
@@ -145,15 +132,15 @@
 
 
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6.1</version>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.6.1</version>
+			</plugin>
 
-    </plugins>
-  </build>
-<properties>
-        <app.home>/opt/claudia/</app.home>
-        </properties>
+		</plugins>
+	</build>
+	<properties>
+		<app.home>/opt/claudia/</app.home>
+	</properties>
 </project>
