pom changes to correct lib versions

--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -3,7 +3,7 @@
 # Drivers
 com.telefonica.claudia.smi.drivers.deployment=com.telefonica.claudia.smi.deployment.SMDeploymentDriver
 com.telefonica.claudia.smi.drivers.provisioning=com.telefonica.claudia.smi.provisioning.ONEProvisioningDriver
-com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.smi.monitoring.WasupMonitoringDriver
+#com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.smi.monitoring.WasupMonitoringDriver
 
 # Server the TCloud is installed in.
 com.telefonica.claudia.server.host= localhost
