blank space correction

--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -1,42 +1,42 @@
 # JNDI Connection properties (for Bus interaction)
-java.naming.factory.initial = org.apache.activemq.jndi.ActiveMQInitialContextFactory
-java.naming.provider.url = tcp://localhost:61616
+java.naming.factory.initial=org.apache.activemq.jndi.ActiveMQInitialContextFactory
+java.naming.provider.url=tcp://localhost:61616
 
 # Event Monitorization Rest Bus connection parameters
-RestListenerHost = localhost
-RestListenerPort = 1114
+RestListenerHost=localhost
+RestListenerPort=1114
 
 # SMI Rest Server connection parameters
-SMIHost = localhost
-SMIPort = 8181
+SMIHost=localhost
+SMIPort=8181
 
 # HTTP server for disk images. 
-ImagesServerHost = localhost
-ImagesServerPort = 5555
-ImagesServerPath = /
+ImagesServerHost=localhost
+ImagesServerPort=5555
+ImagesServerPath=/
 
 # VEEM address.
-VEEMHost = localhost
-VEEMPort = 8182
-VEEMPath = /
-ExtendedOCCI = false
+VEEMHost=localhost
+VEEMPort=8182
+VEEMPath=/
+ExtendedOCCI=false
 
 # Undeploy on server stop
 UndeployOnServerStop=false
 
 # ACD related info
-ActivateAcd = false
+ActivateAcd=false
 
 # Multicast monitoring address
 MonitoringAddress= 229.229.0.1
 
 # WASUP address.
 WASUPActive=false
-WASUPHost = localhost
-WASUPPort = 7001
-WASUPPath = /wasup
-WASUPLogin = dmj
-WASUPPassword = dmj1
+WASUPHost=localhost
+WASUPPort=7001
+WASUPPath=/wasup
+WASUPLogin=dmj
+WASUPPassword=dmj1
 
 # WASUP Types
 wasup.customer= vdc
@@ -47,14 +47,14 @@ wasup.network=net
 wasup.hw=hwItem
 
 # Site root (used as FQN prefix)
-SiteRoot = es.tid
+SiteRoot=es.tid
 
 # Network ranges available for Service Manager use
-NetworkRanges = [ Network:10.95.240.0; IP:10.95.240.6/10.95.240.7/10.95.240.8; Netmask:255.255.240.0; Gateway:10.95.240.1; DNS:10.95.240.1; Public:yes; ],\
+NetworkRanges=[ Network:10.95.240.0; IP:10.95.240.6/10.95.240.7/10.95.240.8; Netmask:255.255.240.0; Gateway:10.95.240.1; DNS:10.95.240.1; Public:yes; ],\
 		[ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
 
-DomainName = "LocalDomain"
+DomainName="LocalDomain"
 
 # Setting the following to false disable the generation of <Entity> in the OVF
 # Environments, which *violated DMTF DSP0243*
-OVFEnvEntityGen = true
+OVFEnvEntityGen=true
