--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -1,217 +1,234 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>eu.stratuslab.pkgs.claudia</groupId>
-  <artifactId>tcloud-server-rpm</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
-  <name>TCloud Server RPM Package</name>
-  <packaging>rpm</packaging>
+	<groupId>eu.stratuslab.pkgs.claudia</groupId>
+	<artifactId>tcloud-server-rpm</artifactId>
+	<version>0.1.3-SNAPSHOT</version>
+	<name>TCloud Server RPM Package</name>
+	<packaging>rpm</packaging>
 
-  <parent>
-    <groupId>eu.stratuslab.pkgs.claudia</groupId>
-    <artifactId>claudia-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>eu.stratuslab.pkgs.claudia</groupId>
+		<artifactId>claudia-parent</artifactId>
+		<version>1.2-SNAPSHOT</version>
+	</parent>
 
-  <repositories>
-    <repository>  
-      <id>maven-restlet</id>  
-      <name>Public online Restlet repository</name>  
-      <url>http://maven.restlet.org</url>  
-    </repository>
-  </repositories>
-  
-  <dependencies>
+	<repositories>
+		<repository>
+			<id>maven-restlet</id>
+			<name>Public online Restlet repository</name>
+			<url>http://maven.restlet.org</url>
+		</repository>
+	</repositories>
 
-    <dependency>
-      <groupId>eu.stratuslab.pkgs.claudia</groupId>
-      <artifactId>tcloud-server</artifactId>
-      <version>0.1.3-SNAPSHOT</version>
-      <classifier>environment</classifier>
-      <type>zip</type>
-    </dependency>
+	<dependencies>
 
-    <dependency>
-      <groupId>eu.stratuslab.pkgs.claudia</groupId>
-      <artifactId>driver-one</artifactId>
-      <version>0.1.3-SNAPSHOT</version>
-      <classifier>deployable</classifier>
-      <type>zip</type>
-    </dependency>
+		<dependency>
+			<groupId>eu.stratuslab.pkgs.claudia</groupId>
+			<artifactId>tcloud-server</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+			<classifier>environment</classifier>
+			<type>zip</type>
+		</dependency>
 
-    <dependency>
-      <groupId>eu.stratuslab.pkgs.claudia</groupId>
-      <artifactId>driver-clotho</artifactId>
-      <version>0.1.3-SNAPSHOT</version>
-      <classifier>deployable</classifier>
-      <type>zip</type>
-    </dependency>
+		<dependency>
+			<groupId>eu.stratuslab.pkgs.claudia</groupId>
+			<artifactId>driver-one</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+			<classifier>deployable</classifier>
+			<type>zip</type>
+		</dependency>
 
-  </dependencies>
+		<dependency>
+			<groupId>eu.stratuslab.pkgs.claudia</groupId>
+			<artifactId>driver-clotho</artifactId>
+			<version>0.1.3-SNAPSHOT</version>
+			<classifier>deployable</classifier>
+			<type>zip</type>
+		</dependency>
 
-  <distributionManagement>
-    <repository>
-      <id>stratuslab.releases</id>
-      <name>Releases</name>
-      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>stratuslab.snapshots</id>
-      <name>Snapshots</name>
-      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
+	</dependencies>
 
-  <build>
+	<distributionManagement>
+		<repository>
+			<id>stratuslab.releases</id>
+			<name>Releases</name>
+			<url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>stratuslab.snapshots</id>
+			<name>Snapshots</name>
+			<url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
-    <plugins>
+	<build>
 
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-resources-plugin</artifactId>
-	<version>2.4.3</version>
-	<configuration>
-	  <encoding>UTF-8</encoding>
-	</configuration>
-      </plugin>
+		<plugins>
 
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-dependency-plugin</artifactId>
-	
-	<executions>
-	  
-	  <execution>
-	    <id>unpack</id>
-	    <goals>
-	      <goal>unpack</goal>
-	    </goals>
-	    <configuration>
-	      <artifactItems>
-		<artifactItem>
-		  <groupId>eu.stratuslab.pkgs.claudia</groupId>
-		  <artifactId>tcloud-server</artifactId>
-		  <classifier>environment</classifier>
-		  <type>zip</type>
-		</artifactItem>
-	      </artifactItems>
-	    </configuration>
-	  </execution>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
-	  <execution>
-	    <id>copy</id>
-	    <goals>
-	      <goal>copy</goal>
-	    </goals>
-	    <configuration>
-	      <artifactItems>
-		<artifactItem>
-		  <groupId>eu.stratuslab.pkgs.claudia</groupId>
-		  <artifactId>driver-clotho</artifactId>
-		  <classifier>deployable</classifier>
-		  <type>zip</type>
-		</artifactItem>
-		<artifactItem>
-		  <groupId>eu.stratuslab.pkgs.claudia</groupId>
-		  <artifactId>driver-one</artifactId>
-		  <classifier>deployable</classifier>
-		  <type>zip</type>
-		</artifactItem>
-	      </artifactItems>
-	    </configuration>
-	  </execution>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
 
-	</executions>
+				<executions>
 
-      </plugin>
-      
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
+					<execution>
+						<id>unpack</id>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>eu.stratuslab.pkgs.claudia</groupId>
+									<artifactId>tcloud-server</artifactId>
+									<classifier>environment</classifier>
+									<type>zip</type>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
 
-      <plugin>
+					<execution>
+						<id>copy</id>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>eu.stratuslab.pkgs.claudia</groupId>
+									<artifactId>driver-clotho</artifactId>
+									<classifier>deployable</classifier>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>eu.stratuslab.pkgs.claudia</groupId>
+									<artifactId>driver-one</artifactId>
+									<classifier>deployable</classifier>
+									<type>zip</type>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
 
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>rpm-maven-plugin</artifactId>
-        <version>2.0.1</version>
-	<extensions>true</extensions>
+				</executions>
 
-        <executions>
-          <execution>
-            <goals>
-              <goal>attached-rpm</goal>
-            </goals>
-          </execution>
-        </executions>
+			</plugin>
 
-        <configuration>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 
-          <copyright>2010, NoBody</copyright>
-          <group>Development</group>
-          <description>Maven Recipe: RPM Package.</description>
+			<plugin>
 
-	  <release>1</release>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>rpm-maven-plugin</artifactId>
+				<version>2.0.1</version>
+				<extensions>true</extensions>
 
-          <mappings>
+				<executions>
+					<execution>
+						<goals>
+							<goal>attached-rpm</goal>
+						</goals>
+					</execution>
+				</executions>
 
-            <mapping>
-              <directory>${app.home}/bin/</directory>
-              <filemode>755</filemode>
-              <username>root</username>
-              <groupname>root</groupname>
-              <sources>
-                <source>
-                  <location>target/dependency/tcloud-server/bin</location>
-                </source>
-              </sources>
-            </mapping>
+				<configuration>
 
-            <mapping>
-              <directory>${app.home}/lib/</directory>
-              <sources>
-                <source>
-                  <location>target/dependency/tcloud-server/lib</location>
-                </source>
-              </sources>
-            </mapping>
+					<copyright>2010, NoBody</copyright>
+					<group>Development</group>
+					<description>Maven Recipe: RPM Package.</description>
 
-            <mapping>
-              <directory>${app.home}/conf/</directory>
-              <sources>
-                <source>
-                  <location>target/dependency/tcloud-server/conf</location>
-                </source>
-              </sources>
-            </mapping>
+					<release>1</release>
 
-            <mapping>
-              <directory>${app.home}/driver/</directory>
-              <sources>
-                <source>
-		  <location>target/dependency</location>
-		  <includes>
-		    <include>driver*.zip</include>
-		  </includes>
-                </source>
-              </sources>
-            </mapping>
+					<mappings>
 
-            <mapping>
-              <directory>${app.home}/logs</directory>
-            </mapping>
+						<mapping>
+							<directory>${app.home}/bin/</directory>
+							<filemode>755</filemode>
+							<username>root</username>
+							<groupname>root</groupname>
+							<sources>
+								<source>
+									<location>target/dependency/tcloud-server/bin</location>
+								</source>
+							</sources>
+						</mapping>
 
-          </mappings>
-        </configuration>
-      </plugin>
+						<mapping>
+							<directory>${app.home}/lib/</directory>
+							<sources>
+								<source>
+									<location>target/dependency/tcloud-server/lib</location>
+								</source>
+							</sources>
+						</mapping>
 
-    </plugins>
-  </build>
+						<mapping>
+							<directory>${app.home}/conf/</directory>
+							<sources>
+								<source>
+									<location>target/dependency/tcloud-server/conf</location>
+								</source>
+							</sources>
+						</mapping>
 
-  <properties>
-    <app.home>/opt/claudia/</app.home>
-  </properties>
+						<mapping>
+							<directory>${app.home}/driver/</directory>
+							<sources>
+								<source>
+									<location>target/dependency</location>
+									<includes>
+										<include>driver*.zip</include>
+									</includes>
+								</source>
+							</sources>
+						</mapping>
+
+						<mapping>
+							<directory>${app.home}/logs</directory>
+						</mapping>
+
+						<mapping>
+							<directory>/etc/init.d</directory>
+							<username>root</username>
+							<groupname>root</groupname>
+							<filemode>744</filemode>
+							<directoryIncluded>false</directoryIncluded>
+							<sources>
+								<source>
+									<location>target/dependency/tcloud-server/bin/daemon</location>
+									<includes>
+										<include>tcloudd</include>
+									</includes>
+								</source>
+							</sources>
+						</mapping>
+
+					</mappings>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<properties>
+		<app.home>/opt/claudia/</app.home>
+	</properties>
 
 </project>
