--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -151,7 +151,7 @@
 					<group>Development</group>
 					<description>Maven Recipe: RPM Package.</description>
 
-					<release>1</release>
+					<release>${RELEASE}</release>
 
 					<mappings>
 
@@ -226,6 +226,8 @@
 
 	<properties>
 		<app.home>/opt/claudia/</app.home>
+    <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
+    <RELEASE>0.${maven.build.timestamp}</RELEASE>
 	</properties>
 
 </project>
