ensure snapshot date ends up in rpm package

--- a/claudia-client-rpm/pom.xml
+++ b/claudia-client-rpm/pom.xml
@@ -111,7 +111,7 @@
           <group>Development</group>
           <description>Maven Recipe: RPM Package.</description>
 
-	  <release>1</release>
+	  <release>${RELEASE}</release>
 
           <mappings>
 
@@ -159,6 +159,8 @@
   <properties>
     <app.home>/opt/claudia/</app.home>
     <rpm.release>1</rpm.release>
+    <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
+    <RELEASE>0.${maven.build.timestamp}</RELEASE>
   </properties>
 
 </project>
