--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -112,7 +112,7 @@
 					<group>Development</group>
 					<description>Maven Recipe: RPM Package.</description>
 
-					<release>1</release>
+					<release>${RELEASE}</release>
 
 					<mappings>
 
@@ -173,6 +173,8 @@
 	<properties>
 		<app.home>/opt/claudia/</app.home>
 		<rpm.release>1</rpm.release>
+    <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
+    <RELEASE>0.${maven.build.timestamp}</RELEASE>
 	</properties>
 
 </project>
