--- a/activemq/kahadb/pom.xml
+++ b/activemq/kahadb/pom.xml
@@ -39,6 +39,18 @@
       org.apache.kahadb*;version=${project.version};-noimport:=true
     </activemq.osgi.export>
   </properties>
+  <distributionManagement>
+   <repository>
+      <id>stratuslab.releases</id>
+      <name>Releases</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>stratuslab.snapshots</id>
+      <name>Snapshots</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
