--- a/activemq/kahadb/pom.xml
+++ b/activemq/kahadb/pom.xml
@@ -18,14 +18,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
-    <groupId>org.apache.activemq</groupId>
+    <groupId>eu.stratuslab.pkgs.activemq</groupId>
     <artifactId>activemq-parent</artifactId>
     <version>5.4.2-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.activemq</groupId>
+  <groupId>eu.stratuslab.pkgs.activemq</groupId>
   <artifactId>kahadb</artifactId>
   <packaging>bundle</packaging>
   <name>ActiveMQ :: KahaDB</name>
