--- a/activemq/activemq-jmdns_1.0/pom.xml
+++ b/activemq/activemq-jmdns_1.0/pom.xml
@@ -18,8 +18,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>activemq-parent</artifactId>
-    <groupId>org.apache.activemq</groupId>
-    <version>5.4.2</version>
+    <groupId>eu.stratuslab.pkgs.activemq</groupId>
+    <version>5.4.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>activemq-jmdns_1.0</artifactId>
@@ -33,6 +33,20 @@
     - removed classes with lgpl source headers, leaving only the org.apache.activemq.jmdns package.
   </description>
 
+  <repositories>
+    <repository>
+        <id>com.springsource.repository.bundles.external</id>
+        <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+        <url>http://repository.springsource.com/maven/bundles/external</url>
+    </repository>
+    <repository>
+      <id>apache.snapshots</id>
+      <url>https://repository.apache.org/content/repositories/snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
   <build>
     <plugins>
       <plugin>
