--- a/activemq/activemq-core/pom.xml
+++ b/activemq/activemq-core/pom.xml
@@ -394,6 +394,7 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+	<skipTests>true</skipTests>
           <forkMode>pertest</forkMode>
           <childDelegation>false</childDelegation>
           <useFile>true</useFile>
