--- a/activemq/activemq-core/pom.xml
+++ b/activemq/activemq-core/pom.xml
@@ -20,9 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.activemq</groupId>
+    <groupId>eu.stratuslab.pkgs.activemq</groupId>
     <artifactId>activemq-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>activemq-core</artifactId>
@@ -58,7 +58,20 @@
     <activemq.osgi.dynamic.import>*</activemq.osgi.dynamic.import>
     <surefire.argLine>-Xmx512M</surefire.argLine>
   </properties>
-
+  <repositories>
+    <repository>
+        <id>com.springsource.repository.bundles.external</id>
+        <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+        <url>http://repository.springsource.com/maven/bundles/external</url>
+    </repository>
+    <repository>
+      <id>apache.snapshots</id>
+      <url>https://repository.apache.org/content/repositories/snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
   <dependencies>
 
     <!-- =============================== -->
