activemq binary rpm

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@ grid certificates, and VOMS proxies.
 		<module>claudia-client</module>
 		<module>tcloud-server</module>
 		<module>clotho</module>
-<!--	        <module>activemq</module> -->
 	</modules>
 
 	<profiles>
@@ -43,6 +42,7 @@ grid certificates, and VOMS proxies.
 				<module>tcloud-server-rpm</module>
 				<module>claudia-client-rpm</module>
 				<module>clotho-rpm</module>
+                                <module>activemq-rpm</module>
 			</modules>
 		</profile>
 	</profiles>
