network bridget changes in one driver

--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -25,6 +25,7 @@ onePassword=42d9d2622f862cd803d4395be2c1edd362213525
 oneEnvironmentPath=/home/claudia/tcloud/repository
 oneKernel=/boot/vmlinuz-2.6.26-2-xen-amd64
 oneInitrd=/boot/initrd.img-2.6.26-2-xen-amd64
+oneNetworkBridge=br0
 
 # VMWare Driver Configuration Section
 #--------------------------------------------------------------------------------------
