clotho ruleHome directory added

--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -154,6 +154,12 @@
 						</mapping>
 						<mapping>
 						
+						<mapping>
+							<directory>${app.home}/ruleHome</directory>
+						</mapping>
+						<mapping>						
+
+						
 							<directory>/etc/init.d/</directory>
 							<username>root</username>
 							<groupname>root</groupname>
