--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+			<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+	</dependency>
 		<dependency>
 			<groupId>com.noelios.restlet</groupId>
 			<artifactId>com.noelios.restlet</artifactId>
