private network claudia settings are fixed

--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -52,8 +52,8 @@ SiteRoot=es.tid
 # Network ranges available for Service Manager use
 #NetworkRanges=[ Network:10.95.240.0; IP:10.95.240.6/10.95.240.7/10.95.240.8; Netmask:255.255.240.0; Gateway:10.95.240.1; DNS:10.95.240.1; Public:yes; ],\
 #		[ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
-#NetworkRanges=[ public ], [ private ]
-NetworkRanges=[ public ], [ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
+#NetworkRanges=[ public ], [ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
+NetworkRanges=[ public ], [ private ]
 
 DomainName="LocalDomain"
 
