changes to support mac addresses

--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -55,7 +55,7 @@ SiteRoot=es.tid
 #NetworkRanges=[ public ], [ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
 NetworkRanges=[ public ], [ private ]
 MacEnabled=true
-NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8
+NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9
 
 DomainName="LocalDomain"
 
