--- a/reportclient/pom.xml
+++ b/reportclient/pom.xml
@@ -5,7 +5,7 @@
 
  
   <groupId>eu.stratuslab.pkgs.claudia</groupId>
-  <artifactId>reportClient</artifactId>
+  <artifactId>reportclient</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>ReportClient: Claudia Report Rest Client</name>
 
