--- a/pom.xml
+++ b/pom.xml
@@ -361,6 +361,17 @@ grid certificates, and VOMS proxies.
 				<artifactId>commons-betwixt</artifactId>
 				<version>0.8</version>
 			</dependency>
+		        <dependency>
+          		  <groupId>mysql</groupId>
+       			  <artifactId>mysql-connector-java</artifactId>
+        		  <version>5.1.3</version>
+     		        </dependency>
+
+      			  <dependency>
+               		 <groupId>c3p0</groupId>
+            		 <artifactId>c3p0</artifactId>
+                	 <version>0.9.1.2</version>
+        		 </dependency>
 
 
 		</dependencies>
