--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@ grid certificates, and VOMS proxies.
 				<artifactId>claudia-commons</artifactId>
 				<version>0.1.4-SNAPSHOT</version>
 			</dependency>
+                        <dependency>
+                                <groupId>eu.stratuslab.pkgs.claudia</groupId>
+                                <artifactId>clotho</artifactId>
+                                <version>0.1.4-SNAPSHOT</version>
+                        </dependency>
 
 			<dependency>
 				<groupId>javax.persistence</groupId>
