--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -1,8 +1,6 @@
-#TServer.url=http://10.95.129.34:8183
-TServer.url=http://localhost:8182
-bd.url=jdbc:mysql://10.95.129.34:3306/ClaudiaDB
-bd.user=claudiauser
-bd.password=claudiapass
+TServer.url=http://84.21.173.142:8182
+#TServer.url=http://127.0.01:8182
+
 
 cpu.measures=cpuUsage,cpuUsageMinimum,cpuUsageMaximum,cpuUsagemhzAverage,cpuUsagemhzMinimum,cpuUsagemhzMaximum
 memory.measures=memoryUsage,memUsageMinimum,memUsageMaximum
@@ -13,3 +11,7 @@ nic.measures=netInput,netOutput
 diskUsage.measures=diskUsage
 
 rootReportDirectory=./reports
+
+# Site root (used as FQN prefix)
+SiteRoot=CESGA
+#SiteRoot=grnet
