--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -1,6 +1,6 @@
 TServer.url=http://84.21.173.142:8182
 #TServer.url=http://127.0.01:8182
-
+#TServer.url=http://62.217.120.136:8182
 
 cpu.measures=cpuUsage,cpuUsageMinimum,cpuUsageMaximum,cpuUsagemhzAverage,cpuUsagemhzMinimum,cpuUsagemhzMaximum
 memory.measures=memoryUsage,memUsageMinimum,memUsageMaximum
@@ -13,5 +13,5 @@ diskUsage.measures=diskUsage
 rootReportDirectory=./reports
 
 # Site root (used as FQN prefix)
-SiteRoot=CESGA
-#SiteRoot=grnet
+#SiteRoot=CESGA
+SiteRoot=grnet
