cofigurator project and some changes to work with load balancers

--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,16 @@ grid certificates, and VOMS proxies.
 		<module>claudia-commons</module>
 		<module>driver-clotho</module>
 		<module>driver-one</module>
+		<module>driver-one-mon</module>
 		<module>claudia-client</module>
 		<module>tcloud-server</module>
+		<module>configurators</module>
 		<module>clotho</module>
 		<module>reportclient</module>
+
+
+
+
 	</modules>
 
 	<profiles>
