--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -91,6 +91,13 @@
     </dependency>
     
     <dependency>
+      <groupId>eu.stratuslab.pkgs.claudia</groupId>
+	  <artifactId>configurators</artifactId>
+	   <version>0.1.4-SNAPSHOT</version>
+    </dependency>
+    
+    
+    <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>persistence-api</artifactId>
     </dependency>
