--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -1,14 +1,10 @@
-TServer.url=http://84.21.173.142:8182
+#TServer.url=http://84.21.173.142:8182
 #TServer.url=http://127.0.01:8182
-#TServer.url=http://62.217.120.136:8182
+TServer.url=http://62.217.120.136:8182
 
-cpu.measures=cpuUsage,cpuUsageMinimum,cpuUsageMaximum,cpuUsagemhzAverage,cpuUsagemhzMinimum,cpuUsagemhzMaximum
-memory.measures=memoryUsage,memUsageMinimum,memUsageMaximum
-disk.measures=diskUsageAverage,diskUsageMinimum,diskUsageMaximum,diskReadAverage,diskreadMinimum,diskReadMaximum,diskWriteAverage,diskWriteMinimum,diskWriteMaximum
-network.measures=netInput,netOutput,bandwidthUsage,netUsageMinimum,netUsageMaximum
-others.measures=sysUptimeLatest
-nic.measures=netInput,netOutput
-diskUsage.measures=diskUsage
+restPath=/vmi 
+restServerPort=1114
+restServerHost=localhost
 
 rootReportDirectory=./reports
 
