--- a/reportclient/src/main/resources/log4j.properties
+++ b/reportclient/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.C.layout=org.apache.log4j.PatternLayout
 log4j.appender.C.layout.ConversionPattern=[%d] %p %c - %m%n
 
 log4j.appender.G=org.apache.log4j.RollingFileAppender
-log4j.appender.G.File=logs/global.log
+log4j.appender.G.File=logs/monitor.log
 log4j.appender.G.MaxFileSize=4096KB
 log4j.appender.G.MaxBackupIndex=5
 log4j.appender.G.layout=org.apache.log4j.PatternLayout
