monitoring filters for reportclient

--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -4,8 +4,16 @@ TServer.url=http://127.0.01:8182
 
 vmDiscoverDelay=180
 monitoringDelay=30
-			
-restPath=/vmi 
+
+# limit virtual machine to monitor by name (set to all to monitor all deployed virtual machines)
+#vmMonitor=all
+vmMonName=workernode.replicas.1
+# limit monitor by name (set to all to read information of every existent monitor)
+#Monitor=all
+monitorName=cpus.1
+
+
+restPath=/vmi
 restServerPort=1114
 restServerHost=localhost
 
