Changes for static ips configuration

--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -55,6 +55,8 @@ SiteRoot=es.tid
 NetworkRanges=[ public ], [ private ]
 MacEnabled=true
 NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9/00:16:3e:d9:78:a4/00:16:3e:d9:78:a5/00:16:3e:d9:78:a6/00:16:3e:d9:78:a7
+#StaticIpList=62.217.120.184/62.217.120.185
+StaticIpList=62.217.120.166
 
 DomainName="LocalDomain"
 
