--- a/pom.xml
+++ b/pom.xml
@@ -415,8 +415,8 @@ grid certificates, and VOMS proxies.
   </distributionManagement>
 
   <properties>
-    <nexus.release.repository.name>releases</nexus.release.repository.name>
-    <nexus.snapshot.repository.name>snapshots</nexus.snapshot.repository.name>
+    <nexus.release.repository.name>fedora-14-releases</nexus.release.repository.name>
+    <nexus.snapshot.repository.name>fedora-14-snapshots</nexus.snapshot.repository.name>
   </properties>
 
 	<reporting>
