changes for rpm files

--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -147,7 +147,7 @@
 						</mapping>
 
 						<mapping>
-							<directory>${app.home}/extraFilese</directory>
+							<directory>${app.home}/extraFiles</directory>
 						</mapping>
 
 						<mapping>
