cluadia client auth changes

--- a/claudia-client/src/main/config/claudiaClient.properties
+++ b/claudia-client/src/main/config/claudiaClient.properties
@@ -27,7 +27,7 @@ claudia.environment.folder=/mnt/environment
 
 # Auth properties
 claudia.auth=false
-claudia.proxy=https://localhost:8444
+claudia.proxy=https://localhost:8444/pswd
 claudia.certpath=/opt/claudia/extraFiles/user/
 claudia.cert=stratuslab-test-user.p12
 claudia.certtype=pkcs12
