fixes in dns and gateway config

--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -42,4 +42,10 @@ monitoring.wasup.uri=http://piolin_wasup.hi.inet:7001/wasup
 monitoring.wasup.login=rps
 monitoring.wasup.password=rps1
 
+# DNS, Gateway Configuration
+#--------------------------------------------------------------------------------------
+eth0Gateway=62.217.120.129
+eth0Dns=194.177.210.210
+eth1Gateway=194.177.210.210
+eth1Dns=192.168.1.1
 
