--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -55,7 +55,7 @@ SiteRoot=es.tid
 NetworkRanges=[ public ], [ private ]
 #MacEnabled=true to enable de mac usage, the NerworkMacList section must contain the same number of adresses as IPs specified in private network section.
 MacEnabled=true
-NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9/00:16:3e:d9:78:a4/00:16:3e:d9:78:a5/00:16:3e:d9:78:a6/00:16:3e:d9:78:a7
+NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9/00:16:3e:d9:78:a4/00:16:3e:d9:78:a5/00:16:3e:d9:78:a6/00:16:3e:d9:78:a7/00:16:3e:d9:78:a8/00:16:3e:d9:78:a9/00:16:3e:d9:78:aa/00:16:3e:d9:78:ab
 #StaticIpList=62.217.120.184/62.217.120.185
 StaticIpList=62.217.120.166
 
