pom changes for flexiscale driver inclusion

--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -48,6 +48,13 @@
 			<type>zip</type>
 		</dependency>
 
+		<dependency>
+			<groupId>eu.stratuslab.pkgs.claudia</groupId>
+			<artifactId>driver-flexiscale</artifactId>
+			<version>0.1.7-SNAPSHOT</version>
+			<classifier>deployable</classifier>
+			<type>zip</type>
+		</dependency>
 
 		<dependency>
 			<groupId>eu.stratuslab.pkgs.claudia</groupId>
