tcloud.properties changes

--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -35,7 +35,8 @@ oneUrl=http://localhost:2633/RPC2
 oneUser=OCCIServer
 oneBridge=br1
 onePassword=42d9d2622f862cd803d4395be2c1edd362213525
-oneEnvironmentPath=/home/claudia/tcloud/repository
+#oneEnvironmentPath=/home/claudia/tcloud/repository
+oneEnvironmentPath=/opt/claudia/repository
 oneKernel=/boot/vmlinuz-2.6.26-2-xen-amd64
 oneInitrd=/boot/initrd.img-2.6.26-2-xen-amd64
 
